# polyscope-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
assets/: README.md
examples/: 01_initialize.rs  01_visualize_obj.rs
src/: bindings.rs  imgui.rs  lib.rs  point_cloud_func.rs
src/cpp/: .gitignore  CMakeLists.txt  polyscope_wrapper.cpp  polyscope_wrapper.h
